--- a/config.example
+++ b/config.example
@@ -1,4 +1,8 @@
 CENEO_URL=https://www.ceneo.pl/
-THREADS_AMOUNT=1
 OUTPUT=result
 DATA_FILE=data
+SCRIPT_TYPE=type
+APPROACHES=1
+THREADS_AMOUNT=1
+WAIT_DURING=3000
+WAIT_AFTER=60000
