--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@typescript-eslint/parser": "^7.1.0",
     "@vercel/ncc": "^0.38.1",
     "eslint": "^8.57.0",
-    "pkg": "^5.8.1"
+    "pkg": "^5.8.1",
+    "typescript": "^5.3.3"
   }
 }
